--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.sarav</groupId>
     <artifactId>TomcatMavenApp</artifactId>
     <version>2.1</version>
-    <packaging>war</packaging>
+    <packag>war</packaging>
 
     <name>TomcatMavenApp</name>
 
